# cmake_build_automation

./: 1_init.bat  2_generate.bat  2_setup.bat  3_build.bat  README.md  RUN.bat  build.json  build_data.json  data.json  generate.json  generate_data.json  requirements.txt
build_automation_app/: __main__.py  pyproject.toml
build_automation_app/impl/: cmake.py  json_checker.py
build_automation_app/localimpl/: __init__.py  cmake.py  jsonhelp.py
build_automation_app/modules/: __init__.py  cmake_builder.py  cmake_generator.py  json_checker.py
buildautomation/: __main__.py  setup.py
